--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api test",
+  "name": "api_test",
   "version": "1.0.0",
   "description": "API test nowport",
   "main": "server.js",
